# MPI_T1

./: CMakeLists.txt  README.md  auxiliary.cpp  auxiliary.h  main.cpp  petsccgtest.cpp  process_controller.cpp  process_controller.h  solvertest.cpp  solvertest.h
CMake/: FindMKL.cmake  FindPETSc.cmake
Testing/: Test.mtx  TestHomoStress4k.mtx
matrixio/: CMakeLists.txt  coo_format.h  csr_format.h  csr_simple_format.h  mtx_format.cpp  mtx_format.h  vec_format.h
